@@ -1,3 +1,9 @@
+2014-08-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* soap-client.el (soap-encode-xs-simple-type): Encode xsd:list
+	nodes.
+	(soap-decode-xs-simple-type): Decode xsd:list nodes.
+
 2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
 	* soap-client.el (soap-get-candidate-elements): Fix reference
